# hierokeryx

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  flake.nix  hierokeryx.toml  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: comparison.md  index.md  installation.md  troubleshooting.md
docs/concepts/: confidence-math.md  determinism.md  llm-safety.md  why-gliner-plus-llm.md  why-jsonl-hitl.md  workdir-layout.md
docs/how-to/: cost-and-caching.md  cross-doc-resolution.md  custom-llm-backend.md  evaluating-resolution.md  library-mode.md  programmatic-jsonl.md  run-on-gpu.md  tune-thresholds.md
docs/reference/: cli.md
docs/reference/api/: confidence.md  eval.md  extract.md  index.md  llm.md  models.md  pipeline.md  resolve.md  review.md  schema.md
docs/stylesheets/: extra.css
docs/tutorial/: 01-define-schema.md  02-run-pipeline.md  03-inspect-and-review.md  index.md
examples/: basic_usage.py  custom_schema.yaml  evaluate_with_gold.py  hitl_workflow.md  incremental_pipeline.py
src/hierokeryx/: __init__.py  cli.py  confidence.py  models.py  pipeline.py  schema.py
src/hierokeryx/eval/: __init__.py  gold.py  metrics.py  report.py
src/hierokeryx/extract/: __init__.py  gliner_runner.py  tokenize.py
src/hierokeryx/llm/: __init__.py  anthropic_client.py  prompts.py  protocol.py  standard_gateway_client.py  tools.py
src/hierokeryx/resolve/: __init__.py  centroids.py  cluster.py  coref.py  crossdoc.py  embed.py
src/hierokeryx/review/: __init__.py  apply.py  jsonl.py  lint.py  schema_v1.json
tests/: conftest.py
tests/fixtures/docs/: doc_apple.txt  doc_curie.txt  doc_curie_short.txt
tests/fixtures/eval/: curie_gold.jsonl
tests/fixtures/schemas/: people_orgs.yaml
tests/integration/: test_gliner_spans.py  test_pipeline_smoke.py
tests/unit/: test_anthropic_client.py  test_confidence.py  test_coref.py  test_crossdoc.py  test_eval_metrics.py  test_incremental.py  test_incremental_pipeline.py  test_models.py  test_normalize_mentions.py  test_pipeline.py  test_review_roundtrip.py  test_schema.py  test_tokenize.py
